# pyomgmatch

./: .bandit  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  CI_CD_IMPLEMENTATION_SUMMARY.md  GITHUB_SETUP.md  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  app_test.py  build.sh  conftest.py  copy_windows_deps.py  dev.ps1  oa_match.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  release.yml
omg/: _cffi_stub.pyi  omg.py
tests/: test_omg.py
