[metadata]
name = pyomegamatch
version = 0.1.0
description = High-performance multi-string matcher with native C backend
author = Davin Shearer
author_email = davin@apache.org
license = MIT
license_files =
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    cffi>=1.15.1

[options.package_data]
omg = native/*
